--- a/pom.xml
+++ b/pom.xml
@@ -255,6 +255,7 @@
 			<artifactId>spring-security-config</artifactId>
 			<scope>compile</scope>
 		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -263,7 +264,33 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.11</version>
+				<configuration>
+					<excludes>
+						<exclude>**/com/intellect/investmentsms/domain/</exclude>
+						<exclude>**/com/intellect/investmentsms/service/dto/</exclude>
+						<exclude>**/com/intellect/investmentsms/service/mapper/</exclude>
+						<exclude>**/com/intellect/investmentsms/investmentsMsApplication.class</exclude>
+					</excludes>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
