--- a/pom.xml
+++ b/pom.xml
@@ -255,7 +255,11 @@
 			<artifactId>spring-security-config</artifactId>
 			<scope>compile</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.12.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -273,7 +277,8 @@
 						<exclude>**/com/intellect/investmentsms/domain/</exclude>
 						<exclude>**/com/intellect/investmentsms/service/dto/</exclude>
 						<exclude>**/com/intellect/investmentsms/service/mapper/</exclude>
-						<exclude>**/com/intellect/investmentsms/investmentsMsApplication.class</exclude>
+						<exclude>
+							**/com/intellect/investmentsms/investmentsMsApplication.class</exclude>
 					</excludes>
 				</configuration>
 				<executions>
